Problem   -added Problem::is_periodic_ and Problem::is_periodic() Gravity   -moved pup() from source to header file   -removed EnzoMethodGravityCG::hx_,hy_,hz_--passed into apply_precon_() and matvec_()   -changed recurring shift to X and R   -fixed shift amount to be relative to sum(X) and sum(R) Testing   -removed centering from test/index.php

--- a/test/cello.css
+++ b/test/cello.css
@@ -28,7 +28,7 @@ hr {
  }
 
 
-h1 { text-align: center; }
+/* h1 { text-align: center; } */
 tr {
     background-color: #aaa;
     border: solid;
@@ -41,9 +41,9 @@ td {
     border-width: 2px;
     background-color: #ccc; 
     padding: 2px 5px;   
-    text-align: center;
+/*    text-align: center; */
 }
-th {    padding: 2px 3px;       text-align: center;}
+th {    padding: 2px 3px;      text-align: left; }
 td.block {    border-width: 0px;    padding: 0px 0px;   }
 td.noexec     {  color: #000;  background-color: #fa7;}
 td.noout      {  color: #000;  background-color: #fa7;}
